<resources>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="app_name">WorkShop Tutor</string>
    <string name="tools">Tools</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="app_name_with_index">PdfRendererBasic (%1$d/%2$d)</string>

    <string name="transition_text">text</string>
    <string name="transition_image">image</string>
    <string name="unrecognizable_qr_code">Unrecognizable QR code!</string>
    <string name="unrecognizable_nfc_tag">Unrecognizable NFC tag!</string>
    <string name="close_app">Do you want to close the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sign_out">Sign out?</string>
    <string name="portfolio">Portfolio</string>
    <string name="new_email">New email</string>
    <string name="confirm_new_email">Confirm new email</string>
    <string name="new_first_name">New first name</string>
    <string name="new_last_name">New last name</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="password">Password</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
</resources>
